# oklch-color-picker

./: CNAME  Cargo.toml  README.md  Trunk.toml  deploy-build.sh  flake.nix  index.html  oklch-color-picker-459bb0cdfb0087e8_bg.wasm  oklch-color-picker-6d7f13fd0b96d90.js  oklch-color-picker-6d7f13fd0b96d90_bg.wasm  oklch-color-picker-741459ff85447cea.js  oklch-color-picker-741459ff85447cea_bg.wasm  oklch-color-picker-ced98b4cb5f0bd4f.js  oklch-color-picker-ced98b4cb5f0bd4f_bg.wasm  oklch-color-picker-efaa576791802fa7.js  oklch-color-picker-efaa576791802fa7_bg.wasm  readme.md  sw.js
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml
assets/: manifest.json  sw.js
src/: app.rs  cli.rs  formats.rs  gamut.rs  gl_programs.rs  lib.rs  main.rs  parser_daemon.rs  parser_lua_module.rs  render.rs
src/shaders/: alpha_frag.glsl  chroma_frag.glsl  final_frag.glsl  fragment.wgsl  functions.glsl  hue_frag.glsl  lightness_frag.glsl  picker0_frag.glsl  picker1.wgsl  picker1_frag.glsl  picker2_frag.glsl  picker_frag.glsl  quad_vert.glsl  shared.wgsl  slider0_frag.glsl  slider1_frag.glsl  slider2_frag.glsl  vertex.wgsl
src/stuff/: main.rs
