[package]
name = "oklch-color-picker"
version = "1.5.1"
edition = "2021"
license = "MIT"
description = "A standalone graphical color picker using the Oklch color space. Allows output to hex, rgb, hsl and many other formats."
repository = "https://github.com/eero-lehtinen/oklch-color-picker"
readme = "readme.md"
keywords = ["color", "oklch", "oklab", "utility", "color-picker"]
categories = ["visualization"]

[dependencies]
bevy_color = { version = "0.14.2", default-features = false }
clap = { version = "4.5.17", features = ["derive"] }
eframe = { version = "0.28.1", default-features = false, features = [
	"accesskit",
	"glow",
	"wayland",
	"x11",
	"persistence",
] }
egui = { version = "0.28.1", default-features = false, features = ["rayon"] }
egui_extras = { version = "0.28.1", default-features = false, features = [
	"serde",
] }
enum-map = "2.7.3"
lexical-parse-float = { version = "1.0.0", features = ["format"] }
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
strum = { version = "0.26.3", features = ["derive"] }
winnow = { version = "0.6.18", features = ["simd"] }
