[package]
name = "oklch-color-picker"
version = "1.10.0"
edition = "2021"
license = "MIT"
description = "A standalone graphical color picker using the Oklch color space. Allows output to hex, rgb, hsl and many other formats."
repository = "https://github.com/eero-lehtinen/oklch-color-picker"
readme = "README.md"
keywords = ["color", "oklch", "oklab", "utility", "color-picker"]
categories = ["visualization"]

[dependencies]
anyhow = "1.0.90"
bevy_color = { version = "0.14.2", default-features = false }
clap = { version = "4.5.17", features = ["derive"] }
eframe = { version = "0.29.0", default-features = false, features = [
	"accesskit",
	"glow",
	"wayland",
	"x11",
	"persistence",
] }
egui = { version = "0.29.0", default-features = false, features = ["rayon"] }
egui_extras = { version = "0.29.0", default-features = false, features = [
	"serde",
] }
enum-map = "2.7.3"
lexical-parse-float = { version = "1.0.0", features = ["format"] }
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["small_rng"] }
strum = { version = "0.26.3", features = ["derive"] }
web-time = "1.1.0"
winnow = { version = "0.6.18", features = ["simd"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
interprocess = { version = "2.2.1", features = ["tokio"] }
tokio = "1.40.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
