[package]
name = "oklch-color-picker"
version = "2.2.1"
edition = "2024"
license = "MIT"
description = "A standalone graphical color picker using the Oklch color space. Allows output to hex, rgb, hsl and many other formats."
repository = "https://github.com/eero-lehtinen/oklch-color-picker"
readme = "README.md"
keywords = ["color", "oklch", "oklab", "utility", "color-picker"]
categories = ["visualization"]

[[bin]]
name = "oklch-color-picker"

[lib]
name = "parser_lua_module"
path = "src/parser_lua_module.rs"
crate-type = ["cdylib"]


[dependencies]
anyhow = "1.0.90"
bevy_color = { version = "0.15.1", default-features = false }
clap = { version = "4.5.17", features = ["derive"] }
eframe = { version = "0.32.0", default-features = false, features = [
	"accesskit",
	"glow",
	"wayland",
	"x11",
	"persistence",
	"web_screen_reader",
] }
egui = { version = "0.32.0", default-features = false, features = [
	"rayon",
	"accesskit",
	"persistence",
	"log",
] }
egui_extras = { version = "0.32.0", default-features = false, features = [
	"serde",
	"svg",
] }
enum-map = "2.7.3"
lexical-parse-float = { version = "1.0.0", features = ["format"] }
once_cell = "1.19.0"
rand = { version = "0.9.0", features = ["small_rng"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
strum = { version = "0.27.1", features = ["derive"] }
web-time = "1.1.0"
winnow = { version = "0.7.3", features = ["simd"] }
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
interprocess = { version = "2.2.1", features = ["tokio"] }
tokio = "1.40.0"
mlua = { version = "0.11.0", features = ["module", "luajit"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
